forms validation fixed, ecomarket(checkbox) scrollbar added, selesctAll button enable

--- a/src/components/Modal/index.module.sass
+++ b/src/components/Modal/index.module.sass
@@ -35,13 +35,13 @@ input::placeholder
   font-size: 14px
   width: 384px
   margin-top: 10%
-  margin-bottom: 5%
+  margin-bottom: 7%
   outline: none
 .input2
   font-size: 14px
   width: 384px
-  margin-top: 5%
-  margin-bottom: 10%
+  //margin-top: 5%
+  margin-bottom: 7%
   outline: none
 .btn_green
   color: white
@@ -85,6 +85,17 @@ input::placeholder
   margin-bottom: 5%
   outline: none
   //outline-color: rgba(255, 69, 69, 1)
+
+.error
+  color: rgba(255, 69, 69, 1)
+  margin-top: -3%
+  margin-bottom: 4%
+  padding: 0
+  font-size: 12px
+
+input
+  padding-left: 3%
+
 
 
 
