--- a/src/components/content/checkbox/checkbox.module.scss
+++ b/src/components/content/checkbox/checkbox.module.scss
@@ -77,3 +77,15 @@ label{
     margin-top: 2%;
     width: 35%;
 }
+
+.scroll{
+    height: 100px;
+    overflow: auto;
+    //overflow-y: scroll;
+    //position: relative;
+}
+//.scroll::-webkit-scrollbar-track{
+//    background-color: #f5f5f5;
+//    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+//}
+
